--- a/style.css
+++ b/style.css
@@ -8,21 +8,24 @@ body {
 }
 
 .box {
-  width: 20%;
+  width: 25%;
   margin: 300px auto;
-  background-color: rgba(12, 12, 12, 0.637);
-  border: solid 5px rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
+  border: solid 5px rgb(3, 3, 3);
   border-radius: 100px;
   padding: 20px;
+  text-align: center;
 }
 
 h3 {
   text-align: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0 auto;
-  color: ;
+ 
 }
-
-#rgb1 {
-color: #808080;
+ 
+#rgbtext {
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
